viewport jumping bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 
 /*GLOBAL STYLING*/
 html{
-	height: 100%;
+	height: 100vh;
 	/*overflow: hidden;*/
 }
 
